k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.31.2 (a92241f79)
  creationTimestamp: null
  labels:
    io.kompose.service: backend
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: backend
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.31.2 (a92241f79)
      creationTimestamp: null
      labels:
        io.kompose.network/microservice-app-app-network: "true"
        io.kompose.service: backend
    spec:
      containers:
        - env:
            - name: DATABASE_URL
              value: postgresql://user:password@db:5432/appdb
          image: backend
          imagePullPolicy: Never
          livenessProbe:
            exec:
              command:
                - wget
                - --spider
                - -q
                - http://localhost:5000/api/parcels/TEST
            failureThreshold: 3
            periodSeconds: 30
            timeoutSeconds: 10
          name: backend
          ports:
            - containerPort: 5000
              hostPort: 5000
              protocol: TCP
          resources: {}
      restartPolicy: Always
status: {}
