k8s/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.31.2 (a92241f79)
  creationTimestamp: null
  labels:
    io.kompose.service: db
  name: db
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: db
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.31.2 (a92241f79)
      creationTimestamp: null
      labels:
        io.kompose.network/microservice-app-app-network: "true"
        io.kompose.service: db
    spec:
      containers:
        - env:
            - name: POSTGRES_DB
              value: appdb
            - name: POSTGRES_PASSWORD
              value: password
            - name: POSTGRES_USER
              value: user
          image: postgres:15
          livenessProbe:
            exec:
              command:
                - pg_isready -U user
            failureThreshold: 5
            periodSeconds: 30
            timeoutSeconds: 5
          name: db
          ports:
            - containerPort: 5432
              protocol: TCP
          resources: {}
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: db-data
            - mountPath: /docker-entrypoint-initdb.d/init.sql
              name: db-claim1
              subPath: init.sql
      restartPolicy: Always
      volumes:
        - name: db-data
          persistentVolumeClaim:
            claimName: db-data
        - name: db-claim1
          persistentVolumeClaim:
            claimName: db-claim1
status: {}
