k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.31.2 (a92241f79)
  creationTimestamp: null
  labels:
    io.kompose.service: frontend
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: frontend
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.31.2 (a92241f79)
      creationTimestamp: null
      labels:
        io.kompose.network/microservice-app-app-network: "true"
        io.kompose.service: frontend
    spec:
      containers:
        - image: frontend
          imagePullPolicy: Never
          livenessProbe:
            exec:
              command:
                - wget
                - --spider
                - -q
                - http://localhost
            failureThreshold: 3
            periodSeconds: 30
            timeoutSeconds: 10
          name: frontend
          ports:
            - containerPort: 80
              hostPort: 3000
              protocol: TCP
          resources: {}
      restartPolicy: Always
status: {}
