k8s/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.31.2 (a92241f79)
  creationTimestamp: null
  labels:
    io.kompose.service: worker
  name: worker
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: worker
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.31.2 (a92241f79)
      creationTimestamp: null
      labels:
        io.kompose.network/microservice-app-app-network: "true"
        io.kompose.service: worker
    spec:
      containers:
        - env:
            - name: DATABASE_URL
              value: postgresql://user:password@db:5432/appdb
          image: worker
          imagePullPolicy: Never
          livenessProbe:
            exec:
              command:
                - pgrep
                - python
            failureThreshold: 3
            periodSeconds: 30
            timeoutSeconds: 10
          name: worker
          resources: {}
      restartPolicy: Always
status: {}
